--- a/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
+++ b/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
@@ -60,13 +60,14 @@
     <Compile Include="encoder\AltitudeEncoder.cs" />
     <Compile Include="encoder\VerticalSpeedEncoder.cs" />
     <Compile Include="event\Notifiable.cs" />
-    <Compile Include="input\ParkingBrakeInput.cs" />
-    <Compile Include="input\APStateInput.cs" />
-    <Compile Include="input\FPSInput.cs" />
-    <Compile Include="input\VerticalSpeedInput.cs" />
-    <Compile Include="input\AltitudeInput.cs" />
-    <Compile Include="input\HeadingInput.cs" />
-    <Compile Include="input\CnxStateInput.cs" />
+    <Compile Include="input\misc\GearInput.cs" />
+    <Compile Include="input\misc\ParkingBrakeInput.cs" />
+    <Compile Include="input\nav\APStateInput.cs" />
+    <Compile Include="input\debug\FPSInput.cs" />
+    <Compile Include="input\nav\VerticalSpeedInput.cs" />
+    <Compile Include="input\nav\AltitudeInput.cs" />
+    <Compile Include="input\nav\HeadingInput.cs" />
+    <Compile Include="input\debug\CnxStateInput.cs" />
     <Compile Include="encoder\HeadingEncoder.cs" />
     <Compile Include="msfs\MsfsData.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
