--- a/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
+++ b/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
@@ -63,12 +63,13 @@
     <Compile Include="event\Notifiable.cs" />
     <Compile Include="input\misc\GearInput.cs" />
     <Compile Include="input\misc\ParkingBrakeInput.cs" />
-    <Compile Include="input\nav\APNavStateInput.cs" />
-    <Compile Include="input\nav\APAltStateInput.cs" />
-    <Compile Include="input\nav\APHeadStateInput.cs" />
-    <Compile Include="input\nav\APSpeedStateInput.cs" />
-    <Compile Include="input\nav\APVSStateInput.cs" />
-    <Compile Include="input\nav\APStateInput.cs" />
+    <Compile Include="input\nav\AP\APWPDisplay.cs" />
+    <Compile Include="input\nav\AP\APNavStateInput.cs" />
+    <Compile Include="input\nav\AP\APAltStateInput.cs" />
+    <Compile Include="input\nav\AP\APHeadStateInput.cs" />
+    <Compile Include="input\nav\AP\APSpeedStateInput.cs" />
+    <Compile Include="input\nav\AP\APVSStateInput.cs" />
+    <Compile Include="input\nav\AP\APStateInput.cs" />
     <Compile Include="input\debug\FPSInput.cs" />
     <Compile Include="input\nav\SpeedInput.cs" />
     <Compile Include="input\nav\VerticalSpeedInput.cs" />
