--- a/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
+++ b/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="encoder\DefaultEncoder.cs" />
+    <Compile Include="encoder\RefreshRateEncoder.cs" />
     <Compile Include="encoder\ZoomEncoder.cs" />
     <Compile Include="encoder\AltitudeEncoder.cs" />
     <Compile Include="encoder\AileronTrimEncoder.cs" />
