--- a/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
+++ b/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="encoder\DefaultEncoder.cs" />
     <Compile Include="encoder\RefreshRateEncoder.cs" />
+    <Compile Include="encoder\MixtureEncoder.cs" />
     <Compile Include="encoder\ZoomEncoder.cs" />
     <Compile Include="encoder\AltitudeEncoder.cs" />
     <Compile Include="encoder\AileronTrimEncoder.cs" />
