--- a/MsfsPlugin/MsfsPlugin/PluginConfiguration.json
+++ b/MsfsPlugin/MsfsPlugin/PluginConfiguration.json
@@ -1,4 +1,4 @@
 {
-  "displayName": "Msfs plugin",
-  "supportedDevices": "Loupedeck30"
+  "displayName": "MSFS",
+  "supportedDevices": "Loupedeck20,Loupedeck30"
 }
