--- a/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
+++ b/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
@@ -77,6 +77,8 @@
     <Compile Include="encoder\PropellerEncoder.cs" />
     <Compile Include="encoder\ThrottleEncoder.cs" />
     <Compile Include="encoder\SpoilerEncoder.cs" />
+    <Compile Include="event\Binding.cs" />
+    <Compile Include="event\BindingKeys.cs" />
     <Compile Include="event\Notifiable.cs" />
     <Compile Include="folder\AirlinerDynamicFolder.cs" />
     <Compile Include="folder\APDynamicFolder.cs" />
