--- a/MsfsPlugin/MsfsPlugin/Resources/LoupedeckPackage.yaml
+++ b/MsfsPlugin/MsfsPlugin/Resources/LoupedeckPackage.yaml
@@ -9,5 +9,5 @@ supportedDevices:
     - LoupedeckCt  
     - LoupedeckLive
 
-pluginFileName: MsfsPlugin.dll
+pluginFileName: MSFSPlugin.dll
 pluginFolderWin: bin\win\
