--- a/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
+++ b/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
@@ -23,7 +23,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\..\AppData\Local\Loupedeck\Plugins\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -36,6 +36,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>bin\Release\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <OutputPath>..\..\..\..\..\AppData\Local\Loupedeck\Plugins\</OutputPath>
@@ -44,9 +45,9 @@
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.FlightSimulator.SimConnect, Version=11.0.62651.3, Culture=neutral, PublicKeyToken=baf445ffb3a06b5c, processorArchitecture=AMD64">
-      <HintPath>..\..\..\..\..\..\..\MSFS SDK\SimConnect SDK\lib\managed\Microsoft.FlightSimulator.SimConnect.dll</HintPath>
+    <Reference Include="Microsoft.FlightSimulator.SimConnect, Version=10.0.61259.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\MSFS SDK\SimConnect SDK\lib\managed\Microsoft.FlightSimulator.SimConnect.dll</HintPath>
     </Reference>
     <Reference Include="PluginApi, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -166,15 +167,20 @@
   <PropertyGroup>
     <PostBuildEvent>xcopy "C:\MSFS SDK\SimConnect SDK\lib\SimConnect.dll" "." /Y
 if $(ConfigurationName) == Release (
-  powershell Remove-Item '$(OutDir)archive' -Recurse -Force
-  powershell New-Item -Path '$(OutDir)archive\bin\win' -ItemType Directory -Force
-  powershell Copy-Item '$(OutDir)MSFSPlugin.dll' -Destination '$(OutDir)archive\bin\win'
-  powershell Copy-Item '$(OutDir)Microsoft.FlightSimulator.SimConnect.dll' -Destination '$(OutDir)archive\bin\win'
-  powershell Copy-Item '$(OutDir)\SimConnect.dll' -Destination '$(OutDir)archive\bin\win'
-  powershell Copy-Item '$(OutDir)Resources\LoupedeckPackage.yaml' -Destination '$(OutDir)archive\'
-  powershell Compress-Archive -Path '$(OutDir)archive\*' -DestinationPath '$(OutDir)archive\MSFSPluginPackage.zip'
-  powershell Rename-Item -Path '$(OutDir)archive\MSFSPluginPackage.zip' -NewName MSFSPluginPackage.lplug4
-)
-</PostBuildEvent>
+  powershell Remove-Item 'archive' -Recurse -Force
+  powershell New-Item -Path 'archive\bin\win' -ItemType Directory -Force
+  powershell Copy-Item 'MSFSPlugin.dll' -Destination 'archive\bin\win'
+  powershell Copy-Item 'Microsoft.FlightSimulator.SimConnect.dll' -Destination 'archive\bin\win'
+  powershell Copy-Item 'SimConnect.dll' -Destination 'archive\bin\win'
+  powershell Copy-Item 'Resources\LoupedeckPackage.yaml' -Destination 'archive\'
+  powershell Compress-Archive -Path 'archive\*' -DestinationPath 'archive\MSFSPluginPackage.zip'
+  powershell Rename-Item -Path 'archive\MSFSPluginPackage.zip' -NewName MSFSPluginPackage.lplug4
+) else (
+  powershell Remove-Item '%25USERPROFILE%25\AppData\Local\Loupedeck\Plugins\MSFS' -Recurse -Force
+  powershell New-Item -Path '%25USERPROFILE%25\AppData\Local\Loupedeck\Plugins\MSFS' -ItemType Directory -Force
+  powershell Copy-Item 'MSFSPlugin.dll' -Destination '%25USERPROFILE%25\AppData\Local\Loupedeck\Plugins\MSFS'
+  powershell Copy-Item 'Microsoft.FlightSimulator.SimConnect.dll' -Destination '%25USERPROFILE%25\AppData\Local\Loupedeck\Plugins\MSFS'
+  powershell Copy-Item 'SimConnect.dll' -Destination '%25USERPROFILE%25\AppData\Local\Loupedeck\Plugins\MSFS'
+)</PostBuildEvent>
   </PropertyGroup>
 </Project>
