--- a/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
+++ b/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
@@ -174,7 +174,8 @@ if $(ConfigurationName) == Release (
   powershell Copy-Item 'MSFSPlugin.dll' -Destination 'archive\bin\win'
   powershell Copy-Item 'Microsoft.FlightSimulator.SimConnect.dll' -Destination 'archive\bin\win'
   powershell Copy-Item 'SimConnect.dll' -Destination 'archive\bin\win'
-  powershell Copy-Item 'Resources\LoupedeckPackage.yaml' -Destination 'archive\'
+  powershell New-Item -Path 'archive\metadata' -ItemType Directory -Force
+  powershell Copy-Item 'Resources\LoupedeckPackage.yaml' -Destination 'archive\metadata'
   powershell Compress-Archive -Path 'archive\*' -DestinationPath 'archive\MSFSPluginPackage.zip'
   powershell Rename-Item -Path 'archive\MSFSPluginPackage.zip' -NewName MSFSPluginPackage.lplug4
 ) else (
