Add Razor and S

--- a/MsfsPlugin/MsfsPlugin/PluginConfiguration.json
+++ b/MsfsPlugin/MsfsPlugin/PluginConfiguration.json
@@ -1,4 +1,4 @@
 {
   "displayName": "MSFS",
-  "supportedDevices": "Loupedeck20,Loupedeck30"
+  "supportedDevices": "Loupedeck20,Loupedeck30,Loupedeck40,Loupedeck50"
 }
