--- a/MsfsPlugin/MsfsPlugin/Resources/LoupedeckPackage.yaml
+++ b/MsfsPlugin/MsfsPlugin/Resources/LoupedeckPackage.yaml
@@ -8,6 +8,10 @@ copyright: CaliBx
 supportedDevices:
     - LoupedeckCt  
     - LoupedeckLive
+    - LoupedeckLiveS
+    - RazorStreamController
+
+
 
 pluginFileName: MSFSPlugin.dll
 pluginFolderWin: ./bin/win/
